# scripting-capability-probe

./: .gitignore  NEWS.md  README.md  configure.ac  package-lock.json  package.json
src/: Makefile.am  manifest.js  manifest.json.in  tsconfig.json
src/items/: wand_of_probing.json
src/scripts/cicada-lib/: console.ts  container.ts  deep-equal.ts  delay.ts  detailed-type-of.ts  enchantment.ts  entity.ts  event-emitter.ts  format.ts  has-instance.ts  inspect.ts  item-stack.ts  lazy.ts  octet-stream.ts  player.ts  pprint.ts  preferences.ts  raw-text.ts  system.ts  thread.ts  ui.ts  watchdog.ts  world.ts
src/scripts/cicada-lib/entity/: inventory.ts
src/scripts/cicada-lib/lazy/: property.ts  proxy.ts
src/scripts/cicada-lib/pprint/: colours.ts  combinators.ts  flatten.ts  lists.ts  primitives.ts  render.ts  styles.ts
src/scripts/cicada-lib/shims/: console.ts  text-decoder.ts  text-encoder.ts
src/scripts/server/: index.js  index.ts  player-prefs-ui.ts  player-prefs.proto  player-session.ts  probe.ts  probing-thread.ts  probing-toolkit.ts
src/scripts/server/probe/: _utils.ts  es2015.ts  es2016.ts  es2017.ts  es2018.ts  es2019.ts  es2020.ts  es2021.ts  es2022.ts  quickjs.ts  web-api.ts
src/scripts/server/probe/es2015/: annex-B.ts  bindings.ts  built-ins.ts  functions.ts  misc.ts  optimisation.ts  subclassing.ts  syntax.ts
src/scripts/server/probe/es2016/: features.ts  misc.ts
src/scripts/server/probe/es2017/: features.ts  misc.ts
src/scripts/server/probe/es2018/: features.ts  (+1 more)
src/scripts/server/probing-toolkit/: config.ts  expect.ts  group.ts  probe.ts
(+37 files in other folders)
